--- a/django/pages/templates/pages/about.html
+++ b/django/pages/templates/pages/about.html
@@ -1,11 +1,18 @@
 {% extends "blog/base.html" %}
-{% block title %}About - 나만의 블로그{% endblock %}
+{% block title %}About - Dep & Arr{% endblock %}
 
 {% block content %}
-<h1class="h3 mb-3">소개</h1>
-<divclass="card shadow-sm">
-<divclass="card-body">
-<p>여기에 내 소개를 적어보자!</p>
-</div>
-</div>
+  <div class="card shadow-sm">
+    <div class="card-header">
+      <h5 class="mb-0"><i class="bi bi-info-circle"></i> About</h5>
+    </div>
+    <div class="card-body">
+      <p class="card-text">
+        나야
+      </p>
+      <p class="card-text">
+        롯데리아의 악마
+      </p>
+    </div>
+  </div>
 {% endblock %}
