--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <title>{% block title %}Dep & Arr{% endblock %}</title>
+  <link rel="icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='currentColor' d='M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-1.573V14.5a.5.5 0 0 1-1 0V10.92l-5.507 1.573A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.139-1.271.428-1.849Zm-1.82 1.831V6.691l-4.49 2.245A.5.5 0 0 0 0 9.382V10.5a.5.5 0 0 0 .582.493l4.918-1.405V3.445c0-.284.045-.568.132-.858ZM8 2c-.535 0-1.023.22-1.321.57C6.422 2.822 6.275 3.393 6.275 4v3.558l-4.918 2.459A.5.5 0 0 0 1 10.5v.193a.5.5 0 0 0 .582.493l4.336-1.239v2.551a.5.5 0 0 0 1 0v-2.55l4.336 1.239a.5.5 0 0 0 .582-.493v-.193a.5.5 0 0 0-.357-.472L9.725 7.558V4c0-.607-.147-1.178-.402-1.43C9.023 2.22 8.535 2 8 2Z'/%3e%3c/svg%3e" type="image/svg+xml">
+
 
   <style>
     /* A more opinionated and modern color palette based on "Nord" theme */
