--- a/travel/templates/travel/travel_detail.html
+++ b/travel/templates/travel/travel_detail.html
@@ -14,6 +14,12 @@
           <div class="card-text mb-4">
             {{ travel.description|safe }}
           </div>
+
+          <div class="d-flex flex-wrap gap-2">
+            {% for tag in travel.tags.all %}
+              <a href="{% url 'blog:posts_by_tag' tag.name %}" class="badge text-bg-primary text-decoration-none">{{ tag.name }}</a>
+            {% endfor %}
+          </div>
         </div>
         <div class="card-footer text-end">
           <a href="{% url 'travel:travel_list' %}" class="btn btn-outline-primary">
